deployment/hub-auth/kustomize/hub-auth/overlays/local/hub-auth/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: auth-ca-cert
      containers:
        - name: auth
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/auth/tls
